final changes for show and tell

--- a/server/client/single-purpose-app/src/App.scss
+++ b/server/client/single-purpose-app/src/App.scss
@@ -1,1 +1,3 @@
- @import "@material/react-fab/index.scss";
+@import "@material/react-fab/index.scss";
+@import "@material/react-button/index.scss";
+@import '@material/react-text-field/index.scss';
