--- a/server/client/single-purpose-app/src/assets/sass/pages/_addEntry.scss
+++ b/server/client/single-purpose-app/src/assets/sass/pages/_addEntry.scss
@@ -18,3 +18,45 @@
     }
   }
 }
+
+@keyframes colorChange {
+  0% {
+    background-color: $secondaryColor;
+  }
+  60% {
+    background-color: white;
+  }
+
+  100% {
+    background-color: white;
+  }
+}
+
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+    background-color: $secondaryColor;
+  }
+  60% {
+    transform: scale(1.2);
+    opacity: 1;
+    background-color: white;
+  }
+  100% {
+    transform: scale(1);
+    background-color: white;
+  }
+}
+
+.entry-screen-success {
+  height: 100vh;
+  animation-duration: 4s;
+  animation-name: colorChange;
+}
+
+.emoji {
+  margin: auto;
+  animation-duration: 4s;
+  animation-name: bounceIn;
+}
